--- a/public/admin.html
+++ b/public/admin.html
@@ -5,84 +5,121 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Panel Insomnia Admin</title>
 <style>
-  /* BASICS */
   html,body{
-    height:100%;margin:0;padding:0;
+    height:100%;
+    margin:0;
+    padding:0;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;
-    background:#1b142c;overflow:hidden;color:#fff;
-  }
-  canvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:0;}
-
-  /* LOGO ARRIBA, FUERA DE LA TARJETA */
-  .logoTop{
-    position:relative;z-index:2;
-    display:flex;justify-content:center;
-    margin-top:40px; margin-bottom:18px; /* separado del borde */
-  }
-  .logoTop img{
-    width:240px; /* pediste 240px */
-    max-width:60vw;
-    height:auto;
-    filter:drop-shadow(0 0 8px rgba(255,255,255,.25));
+    background:#1b142c;
+    overflow:hidden;
+    color:#fff;
   }
 
-  /* TARJETA (más chica y centrada) */
+  canvas{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:0;
+  }
+
   .wrap{
-    position:relative;z-index:2;
-    width:92%;max-width:520px; /* más pequeña */
-    margin:0 auto 28px auto;   /* centrada */
+    position:relative;
+    z-index:2;
+    max-width:640px;
+    margin:120px auto 0;
     background:rgba(25,18,45,0.85);
     backdrop-filter:blur(8px);
     border:1px solid rgba(125,90,255,.3);
-    border-radius:16px;
-    padding:20px;
+    border-radius:20px;
+    padding:24px;
     box-shadow:0 10px 40px rgba(0,0,0,.4);
+    text-align:center;
   }
 
-  h1{margin:0 0 10px;text-align:center;color:#fff;font-size:24px;letter-spacing:.5px;}
-  p,small{color:#c7bdf0;text-align:center}
+  h1{margin:10px 0 10px;text-align:center;color:#fff;font-size:26px;letter-spacing:1px;}
+  img.logo{display:block;margin:40px auto -60px auto;width:240px;filter:drop-shadow(0 0 12px rgba(255,255,255,.25));}
 
-  /* FILAS / CONTROLES */
+  p,small{color:#c7bdf0;text-align:center}
   .row{display:flex;gap:8px;margin:10px 0}
   input[type=text]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.4);
-    border-radius:10px;padding:10px;color:#fff;outline:none
+    flex:1;
+    background:#2b2250;
+    border:1px solid rgba(180,140,255,.4);
+    border-radius:10px;
+    padding:10px;
+    color:#fff;
+    outline:none
   }
   input::placeholder{color:#9a8ccc}
 
-  /* BOTONES (compactos y parejos) */
+  /* ==== Botones con efecto neón ==== */
   button{
-    background:#6d4bff;border:none;padding:10px 12px;border-radius:10px;
-    color:#fff;cursor:pointer;transition:.2s;white-space:nowrap
+    position:relative;
+    background:#6d4bff;
+    border:none;
+    padding:10px 14px;
+    border-radius:10px;
+    color:#fff;
+    cursor:pointer;
+    transition:.2s;
+    white-space:nowrap;
+    font-weight:600;
+    letter-spacing:.2px;
+    box-shadow:0 0 0 rgba(173,128,255,0);
+    overflow:hidden;
   }
-  button:hover{filter:brightness(1.15)}
+  button::before{
+    content:"";
+    position:absolute;
+    inset:-2px;
+    border-radius:12px;
+    background:conic-gradient(
+      from 0deg,
+      rgba(173,128,255,.0) 0%,
+      rgba(173,128,255,.55) 15%,
+      rgba(255,255,255,.9) 30%,
+      rgba(173,128,255,.55) 45%,
+      rgba(173,128,255,.0) 60%
+    );
+    filter:blur(8px);
+    animation:rotateGlow 4.5s linear infinite;
+    z-index:0;
+  }
+  button::after{
+    content:"";
+    position:absolute;
+    inset:1.5px;
+    border-radius:8.5px;
+    background:transparent;
+    z-index:1;
+  }
+  button > *{position:relative;z-index:2;}
+  button:hover{
+    transform:translateY(-1px);
+    box-shadow:0 8px 24px rgba(173,128,255,.25);
+  }
+  @keyframes rotateGlow{
+    0%{transform:rotate(0deg);}
+    100%{transform:rotate(360deg);}
+  }
+  @media(prefers-reduced-motion:reduce){
+    button::before{animation:none;}
+    button:hover{transform:none;}
+  }
 
   .item{display:flex;gap:8px;margin:6px 0}
-  .item input{flex:1}
-
-  .bar{
-    display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin-top:12px
-  }
-
-  /* MENSAJES */
+  .bar{display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin-top:12px}
   .ok{color:#90f0b0;text-align:center}
   .err{color:#fca5a5;text-align:center}
-
-  /* RESPONSIVE */
-  @media (max-width:420px){
-    button{padding:9px 10px;font-size:14px}
-  }
 </style>
 </head>
 <body>
 <canvas id="bg"></canvas>
 
-<!-- LOGO ARRIBA, FUERA DEL BORDE -->
-<div class="logoTop">
-  <img src="/logo-insomnia.png" alt="Insomnia Logo">
-</div>
+<img src="/insomnia-logo.png" class="logo" alt="Insomnia Logo">
 
-<!-- TARJETA PEQUEÑA CENTRADA -->
 <div class="wrap">
   <h1>Panel Admin</h1>
   <p>Gestioná tus enlaces wa.me con rotación automática (2 clics por número).</p>
@@ -93,10 +130,9 @@
   </div>
 
   <div class="bar">
-    <button id="btnLoad">Cargar lista</button>
+    <button id="btnUpdate">Actualizar lista</button>
     <button id="btnAdd">Agregar</button>
-    <button id="btnSave">Guardar</button>
-    <button id="btnReset">Reset lista</button>
+    <button id="btnReset">Borrar lista</button>
     <button id="btnRot">Reset rotación</button>
   </div>
 
@@ -106,7 +142,7 @@
 </div>
 
 <script>
-/* ======= Partículas ======= */
+// ==== partículas fondo ====
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let p=[];
 function resize(){c.width=innerWidth;c.height=innerHeight}
@@ -118,61 +154,61 @@ function anim(){
   for(const o of p){o.x+=o.vx;o.y+=o.vy;
     if(o.x<0||o.x>c.width)o.vx*=-1;
     if(o.y<0||o.y>c.height)o.vy*=-1;
-    x.beginPath();x.arc(o.x,o.y,o.r,0,6.283);x.fill();}
+    x.beginPath();x.arc(o.x,o.y,o.r,0,6.28);x.fill();}
   requestAnimationFrame(anim);
 }
 anim();
 
-/* ======= Lógica panel ======= */
+// ==== lógica del panel ====
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg");
 const tokenInput=$("#token");
 
-function row(v=""){
-  const d=document.createElement("div");d.className="item";
-  const i=document.createElement("input");i.value=v;i.placeholder="https://wa.me/...";
-  const b=document.createElement("button");b.textContent="Borrar";b.onclick=()=>d.remove();
-  d.append(i,b);list.append(d);
-}
+function row(v=""){const d=document.createElement("div");d.className="item";
+const i=document.createElement("input");i.value=v;i.placeholder="https://wa.me/...";
+const b=document.createElement("button");b.textContent="Borrar";b.onclick=()=>d.remove();
+d.append(i,b);list.append(d);}
+
 function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim()).filter(Boolean)}
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err";}
 
 $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
-window.onload=()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t;};
+window.onload=async()=>{
+  const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t;
+  if(t) await loadList(t);
+};
 
-$("#btnLoad").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+async function loadList(t){
   show("Cargando...");
   const r=await fetch(`/api/admin?token=${t}&get=1`);
   const j=await r.json();
-  list.innerHTML="";(j.links||[]).forEach(v=>row(v));if((j.links||[]).length==0)row("");
+  list.innerHTML="";
+  (j.links||[]).forEach(v=>row(v));
+  if((j.links||[]).length==0)row("");
   show("Lista cargada");
-};
+}
 
 $("#btnAdd").onclick=()=>row("");
 
-$("#btnSave").onclick=async()=>{
+$("#btnUpdate").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
   const vals=values();if(!vals.length)return show("Nada que guardar",0);
   show("Guardando...");
-  const r=await fetch(`/api/admin-post?token=${t}`,{
-    method:"POST",headers:{"Content-Type":"application/json"},
-    body:JSON.stringify(vals)
-  });
-  const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error",j.ok);
+  const r=await fetch(`/api/admin-post?token=${t}`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)});
+  const j=await r.json();
+  if(j.ok){show(`Guardado (${j.saved})`);await loadList(t);}
+  else show("Error al guardar",0);
 };
 
 $("#btnReset").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/admin?token=${t}&reset=1`);
-  const j=await r.json();
-  list.innerHTML="";row("");show(j.ok?"Lista reseteada":"Error",j.ok);
+  const r=await fetch(`/api/admin?token=${t}&reset=1`);const j=await r.json();
+  list.innerHTML="";row("");show(j.ok?"Lista borrada":"Error",j.ok);
 };
 
 $("#btnRot").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/rotate-reset?token=${t}`);
-  const j=await r.json();
+  const r=await fetch(`/api/rotate-reset?token=${t}`);const j=await r.json();
   show(j.ok?"Rotación reiniciada":"Error",j.ok);
 };
 </script>
