--- a/public/admin.html
+++ b/public/admin.html
@@ -5,52 +5,53 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Panel Insomnia Admin</title>
 <style>
-  /* ===== base ===== */
   :root{
-    --bg:#1b142c;
+    --bg1:#4b0082;     /* violeta brillante */
+    --bg2:#000000;     /* negro */
+    --particle:#c7b3ff;/* partículas más claras */
     --card:#1c1433f0;
-    --edge1:rgba(174,143,255,.15);
-    --edge2:rgba(255,255,255,.45);
+    --edge1:rgba(174,143,255,.16);
+    --edge2:rgba(255,255,255,.55);
     --text:#ffffff;
     --muted:#c9c0f2;
-    --btn:#6d4bff;
-    --btn-edge1:rgba(255,255,255,.15);
-    --btn-edge2:rgba(255,255,255,.65);
+    --btn-bg:#221b3d;          /* fondo botón más oscuro */
+    --neon1:#b985ff;           /* neón violeta */
+    --neon2:#e9d5ff;           /* destello violeta muy claro */
+    --neon3:#b985ff;
   }
-  html,body{height:100%;margin:0;padding:0;background:var(--bg);color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;overflow:hidden}
+
+  html,body{
+    height:100%;margin:0;padding:0;color:var(--text);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
+    background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));
+    overflow:hidden;
+  }
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
 
-  /* ===== contenedor y logo ===== */
-  .shell{position:relative;z-index:2;max-width:760px;margin:12px auto 36px; padding:0 14px}
+  /* LOGO pegado a la tarjeta */
+  .shell{position:relative;z-index:2;max-width:760px;margin:10px auto 36px;padding:0 14px}
   .logo-wrap{display:flex;justify-content:center}
   .logo{
-    width:240px;               /* tamaño del logo */
-    display:block;
+    width:240px;display:block;
     filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));
-    margin:18px auto -10px;    /* lo pega a la tarjeta */
+    margin:16px auto -14px; /* pega la tarjeta al logo */
   }
 
-  /* ===== tarjeta con borde “neón” animado ===== */
+  /* TARJETA con borde suave y destello */
   .card{
     margin:0 auto;
     background:
       linear-gradient(var(--card),var(--card)) padding-box,
       linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;
-    border-radius:20px;
+    border:1px solid transparent;border-radius:20px;
     box-shadow:0 12px 40px rgba(0,0,0,.45);
-    animation:shine 8s linear infinite;
-    background-size:auto,300% 300%;
   }
-  .card-inner{padding:22px}
-  @keyframes shine{0%{background-position:0 0,0% 50%}100%{background-position:0 0,300% 50%}}
+  .card-inner{padding:20px}
 
-  /* ===== textos ===== */
-  h1{margin:6px 0 10px;text-align:center;font-size:30px;letter-spacing:.5px}
+  h1{margin:6px 0 8px;text-align:center;font-size:28px;letter-spacing:.5px}
   p,small{color:var(--muted);text-align:center;margin:0}
-  .subtitle{margin:8px 0 14px}
+  .subtitle{margin:6px 0 14px}
 
-  /* ===== layout inputs/botones ===== */
   .row{display:flex;gap:8px;margin:10px 0}
   input[type=text]{
     flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
@@ -59,39 +60,58 @@
   input::placeholder{color:#9a8ccc}
   .bar{display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin:10px 0 6px}
 
-  /* ===== botón con borde neón “destello” ===== */
+  /* Botones: fondo oscuro + borde neón girando en círculo constante */
   .btn{
     position:relative;
-    border:1px solid transparent;
-    border-radius:12px;
-    padding:10px 14px;
-    color:#fff; cursor:pointer; outline:none;
+    border:1px solid transparent;border-radius:12px;
+    padding:10px 14px;color:#fff;cursor:pointer;outline:none;
     background:
-      linear-gradient(var(--btn),var(--btn)) padding-box,
-      linear-gradient(90deg,var(--btn-edge1),var(--btn-edge2),var(--btn-edge1)) border-box;
-    background-size:auto,200% 100%;
-    animation:sweep 2.6s linear infinite;
+      linear-gradient(var(--btn-bg),var(--btn-bg)) padding-box,
+      conic-gradient(from 0deg,var(--neon1),var(--neon2),var(--neon3),var(--neon1)) border-box;
+    animation:spinBorder 3.5s linear infinite;
     box-shadow:0 6px 22px rgba(40,0,120,.35);
   }
-  .btn:hover{filter:brightness(1.13)}
-  @keyframes sweep{0%{background-position:0% 0}100%{background-position:200% 0}}
+  .btn:hover{filter:brightness(1.12)}
+  @keyframes spinBorder{0%{background-position:0}100%{background-position:360deg}}
 
-  /* items de lista */
   .item{display:flex;gap:8px;margin:6px 0}
   .ok{color:#90f0b0;text-align:center}
   .err{color:#fca5a5;text-align:center}
+
+  /* Botón "Copiar" translúcido */
+  .copy-wrap{display:flex;justify-content:center;align-items:center;gap:10px;margin:8px 0 4px}
+  .example{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;color:#ded6ff}
+  .btn-copy{
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.18);
+    color:#fff;border-radius:10px;padding:8px 12px;cursor:pointer;
+    backdrop-filter:blur(2px);
+  }
+  .btn-copy:hover{background:rgba(255,255,255,.12)}
+
+  /* Tooltip "Copiado" */
+  .tooltip{
+    position:fixed;left:50%;transform:translateX(-50%);
+    bottom:18px;background:rgba(0,0,0,.7);color:#fff;
+    padding:8px 12px;border-radius:10px;font-size:14px;opacity:0;pointer-events:none;
+    transition:opacity .25s ease;
+  }
+  .tooltip.show{opacity:1;}
+
+  @media (max-width:420px){
+    .btn{padding:10px 12px;font-size:14px}
+    .logo{width:220px;margin:14px auto -12px}
+  }
 </style>
 </head>
 <body>
 <canvas id="bg"></canvas>
 
 <div class="shell">
-  <!-- logo pegado a la tarjeta -->
   <div class="logo-wrap">
     <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
   </div>
 
-  <!-- tarjeta -->
   <div class="card">
     <div class="card-inner">
       <h1>Panel Admin</h1>
@@ -103,32 +123,60 @@
       </div>
 
       <div class="bar">
-        <button class="btn" id="btnLoad">Actualizar lista</button>
+        <button class="btn" id="btnUpdate">Actualizar lista</button>
         <button class="btn" id="btnAdd">Agregar</button>
-        <button class="btn" id="btnSave">Guardar cambios</button>
         <button class="btn" id="btnReset">Borrar lista</button>
         <button class="btn" id="btnRot">Reset rotación</button>
       </div>
 
       <div id="list"></div>
       <p id="msg"></p>
-      <small>Ejemplo: https://wa.me/5491178430749?text=Hola%20quisiera%20jugar</small>
+
+      <!-- Ejemplo + Copiar (translúcido) -->
+      <div class="copy-wrap">
+        <span class="example" id="exampleText">https://wa.me/5491112345678?text=Hola%20quisiera%20jugar</span>
+        <button class="btn-copy" id="btnCopy">Copiar</button>
+      </div>
+      <small>Usá el formato de ejemplo para tus enlaces.</small>
     </div>
   </div>
 </div>
 
+<!-- Tooltip -->
+<div id="tooltip" class="tooltip">Copiado ✅</div>
+
 <script>
-/* ===== partículas suaves ===== */
+/* ===== partículas estilo anterior (brillantes) ===== */
 const c=document.getElementById("bg"),x=c.getContext("2d");
-let P=[];function rs(){c.width=innerWidth;c.height=innerHeight}addEventListener("resize",rs);rs();
-for(let i=0;i<85;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.6});
-(function anim(){x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--bg');x.fillRect(0,0,c.width,c.height);
-x.fillStyle="#a68bff";for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill()}requestAnimationFrame(anim)})();
+let P=[];
+function rs(){c.width=innerWidth;c.height=innerHeight}
+addEventListener("resize",rs);rs();
+for(let i=0;i<85;i++)P.push({
+  x:Math.random()*c.width,y:Math.random()*c.height,
+  vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,
+  r:Math.random()*2+.6
+});
+(function anim(){
+  const grad=x.createRadialGradient(c.width*0.3, c.height*0.1, 0, c.width*0.3, c.height*0.1, Math.max(c.width,c.height));
+  grad.addColorStop(0, getComputedStyle(document.documentElement).getPropertyValue('--bg1'));
+  grad.addColorStop(1, getComputedStyle(document.documentElement).getPropertyValue('--bg2'));
+  x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);
+  x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle');
+  for(const p of P){
+    p.x+=p.vx;p.y+=p.vy;
+    if(p.x<0||p.x>c.width)p.vx*=-1;
+    if(p.y<0||p.y>c.height)p.vy*=-1;
+    x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();
+  }
+  requestAnimationFrame(anim);
+})();
 
 /* ===== lógica panel ===== */
-const $=s=>document.querySelector(s), list=$("#list"), msg=$("#msg"), tokenInput=$("#token");
+const $=s=>document.querySelector(s);
+const list=$("#list"),msg=$("#msg"),tokenInput=$("#token");
 
-function row(v=""){const d=document.createElement("div");d.className="item";
+function row(v=""){
+  const d=document.createElement("div");d.className="item";
   const i=document.createElement("input");i.type="text";i.placeholder="https://wa.me/...";i.value=v;
   const b=document.createElement("button");b.className="btn";b.textContent="Borrar";b.onclick=()=>d.remove();
   d.append(i,b);list.append(d);
@@ -137,40 +185,57 @@ function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim(
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
 $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
-window.addEventListener("load",()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t});
+window.onload=async()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t; if(t) await loadList(t);};
 
-$("#btnLoad").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+async function loadList(t){
   show("Cargando...");
-  const r=await fetch(`/api/admin?token=${t}&get=1`);const j=await r.json();
-  list.innerHTML="";(j.links||[]).forEach(v=>row(v));if((j.links||[]).length===0)row("");
+  const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+  const j=await r.json();
+  list.innerHTML="";
+  (j.links||[]).forEach(v=>row(v));
+  if((j.links||[]).length===0)row("");
   show("Lista cargada");
-};
+}
 
 $("#btnAdd").onclick=()=>row("");
 
-$("#btnSave").onclick=async()=>{
+$("#btnUpdate").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
   const vals=values();if(!vals.length)return show("Nada que guardar",0);
   show("Guardando...");
-  const r=await fetch(`/api/admin-post?token=${t}`,{
+  const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
     method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
   });
-  const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error",j.ok);
+  const j=await r.json();
+  if(j.ok){show(`Guardado (${j.saved})`);await loadList(t);}
+  else show("Error al guardar",0);
 };
 
 $("#btnReset").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/admin?token=${t}&reset=1`);const j=await r.json();
+  const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+  const j=await r.json();
   list.innerHTML="";row("");show(j.ok?"Lista borrada":"Error",j.ok);
 };
 
 $("#btnRot").onclick=async()=>{
   const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/rotate-reset?token=${t}`);const j=await r.json();
+  const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+  const j=await r.json();
   show(j.ok?"Rotación reiniciada":"Error",j.ok);
+};
+
+/* ===== Copiar ejemplo + tooltip ===== */
+const copyBtn=$("#btnCopy"), ex=$("#exampleText"), tip=$("#tooltip");
+copyBtn.onclick=async()=>{
+  try{
+    await navigator.clipboard.writeText(ex.textContent.trim());
+    tip.classList.add("show");
+    setTimeout(()=>tip.classList.remove("show"), 2000); // 2s y se desvanece
+  }catch(e){
+    show("No se pudo copiar",0);
+  }
 };
 </script>
 </body>
 </html>
-
