--- a/public/admin.html
+++ b/public/admin.html
@@ -6,101 +6,138 @@
 <title>Panel Insomnia Admin</title>
 <style>
   :root{
-    --bg1:#4b0082;     /* violeta brillante */
-    --bg2:#000000;     /* negro */
-    --particle:#c7b3ff;/* partículas más claras */
-    --card:#1c1433f0;
+    --bg1:#4b0082;           /* violeta brillante */
+    --bg2:#000000;           /* negro */
+    --particle:#c7b3ff;      /* partículas claras */
+    --card:#1c1433f0;        /* tarjeta violeta translúcida */
     --edge1:rgba(174,143,255,.16);
     --edge2:rgba(255,255,255,.55);
     --text:#ffffff;
     --muted:#c9c0f2;
-    --btn-bg:#221b3d;          /* fondo botón más oscuro */
-    --neon1:#b985ff;           /* neón violeta */
-    --neon2:#e9d5ff;           /* destello violeta muy claro */
-    --neon3:#b985ff;
+    --btn-bg:#1e1935;        /* fondo del botón (oscuro) */
+    --neonA:#b985ff;         /* neón violeta */
+    --neonB:#efe6ff;         /* destello muy claro */
   }
 
   html,body{
-    height:100%;margin:0;padding:0;color:var(--text);
+    height:100%;
+    margin:0;
+    color:var(--text);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
     background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));
-    overflow:hidden;
+    /* IMPORTANTE: permitir scroll en celu cuando la lista crece */
+    overflow:auto;
   }
+
+  /* Fondo animado */
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
 
-  /* LOGO pegado a la tarjeta */
-  .shell{position:relative;z-index:2;max-width:760px;margin:10px auto 36px;padding:0 14px}
+  /* Contenedor principal */
+  .shell{position:relative;z-index:2;max-width:760px;margin:8px auto 36px;padding:0 14px}
+
+  /* Logo pegado a la tarjeta */
   .logo-wrap{display:flex;justify-content:center}
   .logo{
-    width:240px;display:block;
+    width:240px;
+    display:block;
     filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));
-    margin:16px auto -18px; /* pega la tarjeta al logo */
+    margin:14px auto -18px; /* pega la tarjeta al logo */
   }
 
-  /* TARJETA con borde suave y destello */
+  /* Tarjeta compacta con borde suave */
   .card{
     margin:0 auto;
     background:
       linear-gradient(var(--card),var(--card)) padding-box,
       linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
+    border:1px solid transparent;
+    border-radius:20px;
     box-shadow:0 12px 40px rgba(0,0,0,.45);
   }
-  .card-inner{padding:20px}
+  .card-inner{padding:18px 16px}
 
-  h1{margin:6px 0 8px;text-align:center;font-size:28px;letter-spacing:.5px}
+  /* Textos */
+  h1{margin:4px 0 8px;text-align:center;font-size:26px;letter-spacing:.5px}
   p,small{color:var(--muted);text-align:center;margin:0}
-  .subtitle{margin:6px 0 14px}
+  .subtitle{margin:6px 0 12px}
 
+  /* Fila de token */
   .row{display:flex;gap:8px;margin:10px 0}
   input[type=text]{
     flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
     border-radius:12px;padding:12px 14px;color:#fff;outline:none
   }
   input::placeholder{color:#9a8ccc}
-  .bar{display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin:10px 0 6px}
 
-  /* Botones: fondo oscuro + borde neón girando en círculo constante */
+  /* ACCIONES: una sola línea SIEMPRE (scroll horizontal en celu) */
+  .actions{
+    display:flex;
+    flex-wrap:nowrap;        /* no bajar de línea */
+    gap:8px;
+    justify-content:flex-start;
+    overflow-x:auto;         /* permite deslizar en celu */
+    -webkit-overflow-scrolling:touch;
+    scroll-snap-type:x mandatory;
+    padding-bottom:4px;
+  }
+  .actions::-webkit-scrollbar{height:6px}
+  .actions::-webkit-scrollbar-thumb{background:rgba(255,255,255,.12);border-radius:999px}
+
+  /* Botones con borde neón girando constantemente (efecto circular real) */
   .btn{
     position:relative;
-    border:1px solid transparent;border-radius:12px;
-    padding:10px 14px;color:#fff;cursor:pointer;outline:none;
-    background:
-      linear-gradient(var(--btn-bg),var(--btn-bg)) padding-box,
-      conic-gradient(from 0deg,var(--neon1),var(--neon2),var(--neon3),var(--neon1)) border-box;
-    animation:spinBorder 3.5s linear infinite;
-    box-shadow:0 6px 22px rgba(40,0,120,.35);
+    border:none;
+    border-radius:12px;
+    padding:10px 12px;
+    color:#fff;
+    cursor:pointer;
+    outline:none;
+    background:var(--btn-bg);
+    box-shadow:0 6px 22px rgba(40,0,120,.28);
+    white-space:nowrap;
+    font-weight:600;
+    letter-spacing:.2px;
+    scroll-snap-align:center;
+    min-width:150px;          /* tamaño uniforme para la fila */
+    text-align:center;
   }
-  .btn:hover{filter:brightness(1.12)}
-  @keyframes spinBorder{0%{background-position:0}100%{background-position:360deg}}
+  .btn:hover{filter:brightness(1.1)}
 
+  /* Anillo neón giratorio */
+  .btn::before{
+    content:"";
+    position:absolute;
+    inset:-2px;
+    border-radius:14px;
+    background:conic-gradient(var(--neonA),var(--neonB),var(--neonA),var(--neonA));
+    animation:spin 2.8s linear infinite;
+    z-index:0;
+
+    /* máscara para que se vea solo el borde (anillo) */
+    -webkit-mask:
+      linear-gradient(#000 0 0) content-box,
+      linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor;
+            mask-composite:exclude;
+    padding:2px; /* grosor del anillo */
+  }
+  .btn > *{position:relative;z-index:1}
+
+  @keyframes spin{to{transform:rotate(360deg)}}
+
+  /* Ítems de la lista */
   .item{display:flex;gap:8px;margin:6px 0}
-  .ok{color:#90f0b0;text-align:center}
-  .err{color:#fca5a5;text-align:center}
+  .item .btn{min-width:auto;padding:10px 12px}
 
-  /* Botón "Copiar" translúcido */
-  .copy-wrap{display:flex;justify-content:center;align-items:center;gap:10px;margin:8px 0 4px}
-  .example{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;color:#ded6ff}
-  .btn-copy{
-    background:rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.18);
-    color:#fff;border-radius:10px;padding:8px 12px;cursor:pointer;
-    backdrop-filter:blur(2px);
-  }
-  .btn-copy:hover{background:rgba(255,255,255,.12)}
+  /* Mensajes */
+  #msg.ok{color:#90f0b0}
+  #msg.err{color:#fca5a5}
 
-  /* Tooltip "Copiado" */
-  .tooltip{
-    position:fixed;left:50%;transform:translateX(-50%);
-    bottom:18px;background:rgba(0,0,0,.7);color:#fff;
-    padding:8px 12px;border-radius:10px;font-size:14px;opacity:0;pointer-events:none;
-    transition:opacity .25s ease;
-  }
-  .tooltip.show{opacity:1;}
-
+  /* Responsive */
   @media (max-width:420px){
-    .btn{padding:10px 12px;font-size:14px}
-    .logo{width:220px;margin:14px auto -12px}
+    .logo{width:220px;margin:12px auto -16px}
+    .btn{min-width:140px;font-size:14px;padding:10px 10px}
+    .card-inner{padding:16px 12px}
   }
 </style>
 </head>
@@ -117,12 +154,14 @@
       <h1>Panel Admin</h1>
       <p class="subtitle">Gestioná tus enlaces wa.me con rotación automática (2 clics por número).</p>
 
+      <!-- Token -->
       <div class="row">
         <input id="token" type="text" placeholder="tok99-2025">
         <button class="btn" id="btnSaveToken">Guardar token</button>
       </div>
 
-      <div class="bar">
+      <!-- UNA sola línea con scroll horizontal -->
+      <div class="actions">
         <button class="btn" id="btnUpdate">Actualizar lista</button>
         <button class="btn" id="btnAdd">Agregar</button>
         <button class="btn" id="btnReset">Borrar lista</button>
@@ -131,37 +170,30 @@
 
       <div id="list"></div>
       <p id="msg"></p>
-
-      <!-- Ejemplo + Copiar (translúcido) -->
-      <div class="copy-wrap">
-        <span class="example" id="exampleText">https://wa.me/5491112345678?text=Hola%20quisiera%20jugar</span>
-        <button class="btn-copy" id="btnCopy">Copiar</button>
-      </div>
-      <small>Usá el formato de ejemplo para tus enlaces.</small>
     </div>
   </div>
 </div>
 
-<!-- Tooltip -->
-<div id="tooltip" class="tooltip">Copiado ✅</div>
-
 <script>
-/* ===== partículas estilo anterior (brillantes) ===== */
+/* ===== Partículas estilo original ===== */
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let P=[];
 function rs(){c.width=innerWidth;c.height=innerHeight}
 addEventListener("resize",rs);rs();
-for(let i=0;i<85;i++)P.push({
+for(let i=0;i<90;i++)P.push({
   x:Math.random()*c.width,y:Math.random()*c.height,
   vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,
-  r:Math.random()*2+.6
+  r:Math.random()*2+.7
 });
 (function anim(){
+  // gradiente de fondo (radial)
   const grad=x.createRadialGradient(c.width*0.3, c.height*0.1, 0, c.width*0.3, c.height*0.1, Math.max(c.width,c.height));
-  grad.addColorStop(0, getComputedStyle(document.documentElement).getPropertyValue('--bg1'));
-  grad.addColorStop(1, getComputedStyle(document.documentElement).getPropertyValue('--bg2'));
+  grad.addColorStop(0, getComputedStyle(document.documentElement).getPropertyValue('--bg1').trim());
+  grad.addColorStop(1, getComputedStyle(document.documentElement).getPropertyValue('--bg2').trim());
   x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);
-  x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle');
+
+  // partículas
+  x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle').trim();
   for(const p of P){
     p.x+=p.vx;p.y+=p.vy;
     if(p.x<0||p.x>c.width)p.vx*=-1;
@@ -171,71 +203,92 @@ for(let i=0;i<85;i++)P.push({
   requestAnimationFrame(anim);
 })();
 
-/* ===== lógica panel ===== */
+/* ===== Lógica del panel ===== */
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg"),tokenInput=$("#token");
 
+/* Crear fila */
 function row(v=""){
   const d=document.createElement("div");d.className="item";
   const i=document.createElement("input");i.type="text";i.placeholder="https://wa.me/...";i.value=v;
   const b=document.createElement("button");b.className="btn";b.textContent="Borrar";b.onclick=()=>d.remove();
   d.append(i,b);list.append(d);
+
+  // Scroll suave al nuevo campo (para celu)
+  setTimeout(()=>{ i.scrollIntoView({behavior:"smooth", block:"end"}); i.focus(); }, 50);
 }
+
+/* Obtener valores */
 function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim()).filter(Boolean)}
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
+/* Guardar token local */
 $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
-window.onload=async()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t; if(t) await loadList(t);};
 
+/* Cargar lista si ya hay token guardado */
+window.onload=async()=>{
+  const t=localStorage.getItem("adm_tok");
+  if(t){ tokenInput.value=t; await loadList(t); }
+};
+
+/* GET lista */
 async function loadList(t){
-  show("Cargando...");
-  const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
-  const j=await r.json();
-  list.innerHTML="";
-  (j.links||[]).forEach(v=>row(v));
-  if((j.links||[]).length===0)row("");
-  show("Lista cargada");
+  try{
+    show("Cargando...");
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+    const j=await r.json();
+    list.innerHTML="";
+    (j.links||[]).forEach(v=>row(v));
+    if((j.links||[]).length===0)row("");
+    show("Lista cargada");
+  }catch(e){
+    show("Error al cargar",0);
+  }
 }
 
+/* Agregar campo */
 $("#btnAdd").onclick=()=>row("");
 
+/* Actualizar lista (POST y luego refresco) */
 $("#btnUpdate").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const vals=values();if(!vals.length)return show("Nada que guardar",0);
-  show("Guardando...");
-  const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
-    method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
-  });
-  const j=await r.json();
-  if(j.ok){show(`Guardado (${j.saved})`);await loadList(t);}
-  else show("Error al guardar",0);
-};
-
-$("#btnReset").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
-  const j=await r.json();
-  list.innerHTML="";row("");show(j.ok?"Lista borrada":"Error",j.ok);
-};
-
-$("#btnRot").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
-  const j=await r.json();
-  show(j.ok?"Rotación reiniciada":"Error",j.ok);
-};
-
-/* ===== Copiar ejemplo + tooltip ===== */
-const copyBtn=$("#btnCopy"), ex=$("#exampleText"), tip=$("#tooltip");
-copyBtn.onclick=async()=>{
+  const t=tokenInput.value.trim();
+  if(!t)return show("Poné token",0);
+  const vals=values();
+  if(!vals.length)return show("Nada que guardar",0);
   try{
-    await navigator.clipboard.writeText(ex.textContent.trim());
-    tip.classList.add("show");
-    setTimeout(()=>tip.classList.remove("show"), 2000); // 2s y se desvanece
-  }catch(e){
-    show("No se pudo copiar",0);
-  }
+    show("Guardando...");
+    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify(vals)
+    });
+    const j=await r.json();
+    if(j.ok){ show(`Guardado (${j.saved})`); await loadList(t); }
+    else show("Error al guardar",0);
+  }catch(e){ show("Error al guardar",0); }
+};
+
+/* Borrar lista (reset=1) */
+$("#btnReset").onclick=async()=>{
+  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+    const j=await r.json();
+    list.innerHTML=""; row("");
+    show(j.ok?"Lista borrada":"Error",j.ok);
+  }catch(e){ show("Error",0); }
+};
+
+/* Resetear rotación */
+$("#btnRot").onclick=async()=>{
+  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
+  try{
+    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+    const j=await r.json();
+    show(j.ok?"Rotación reiniciada":"Error",j.ok);
+  }catch(e){ show("Error",0); }
 };
 </script>
 </body>
 </html>
+
